--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,13 @@
 :root {
-  font-family: system-ui, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000;
   --base-font-size: calc(max(1px, 1 / 1728 * 100vw) * 16);
   font-size: var(--base-font-size);
-  line-height: 1.2;
-  font-weight: 500;
+  line-height: 1.25;
+  font-weight: 400;
   letter-spacing: -0.01em;
 }
 
@@ -16,6 +15,7 @@ body {
   margin: 0;
   padding: 0;
   overscroll-behavior: contain;
+  font-size: 1.25rem;
 }
 
 * {
